crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__alias_simple.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: type Id = Number
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: TypeAlias(
            TypeAlias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: "Id",
                },
                params: [],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            },
        ),
    },
}
