crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_alias_bad_body.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: type Id = 42
---
TypeAlias(
    Body(
        Start(
            1,
            11,
        ),
        1,
        11,
    ),
    1,
    1,
)
