crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_alias_no_body.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: type Id =
---
TypeAlias(
    Body(
        Start(
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    1,
)
