crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_alias_params_no_body.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: "type Pair[a, b]"
---
TypeAlias(
    Body(
        Start(
            1,
            16,
        ),
        1,
        16,
    ),
    1,
    1,
)
