crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_no_name.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: type id = Number
---
TypeAlias(
    Name(
        1,
        6,
    ),
    1,
    1,
)
