crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_params_empty.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: "type Pair[] = Number"
---
TypeAlias(
    Params(
        Empty(
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    1,
)
