crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_params_unclosed.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: "type Pair[a, b = (a, b)"
---
TypeAlias(
    Params(
        End(
            ExpectedEnd {
                opening: Position {
                    line: 1,
                    column: 10,
                },
                boundary: Position {
                    line: 1,
                    column: 15,
                },
                unexpected: Position {
                    line: 1,
                    column: 16,
                },
            },
        ),
        1,
        10,
    ),
    1,
    1,
)
