crates/alder-parse/src/item/snapshots/alder_parse__item__type_alias__tests__error_params_uppercase.snap
---
source: crates/alder-parse/src/item/type_alias.rs
description: "type Pair[A] = A"
---
TypeAlias(
    Params(
        Var(
            1,
            11,
        ),
        1,
        10,
    ),
    1,
    1,
)
